--- a/sections/4_results.tex
+++ b/sections/4_results.tex
@@ -1,4 +1,4 @@
-\section{ANTICIPATED RESULTS/FINAL PRODUCTS}
+\section{Anticipated Results/Final Products}
 
 %Expected results and scientific contribution/contribution to knowledge. Potential impactand significance of the findings.
 
